--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -153,9 +153,9 @@
                       </div>
 
                       <div *ngSwitchCase="'Claim Windscreen'" [item]="routeData">
-                        <app-urgent-ncd [currentData]="detailComponentData"
+                        <app-windscreen [currentData]="detailComponentData"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                        </app-urgent-ncd>
+                        </app-windscreen>
                       </div>
 
                       <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
