--- a/src/app/admin/customer-database/customer-database.component.html
+++ b/src/app/admin/customer-database/customer-database.component.html
@@ -9,15 +9,17 @@
         </h4>
       </div>
       <div class="col-md-6 pr-0">
-        <form>
+        <form #filterForm="ngForm">
           <div class="row">
             <div class="col-md-8 search_bar">
               <i class="fa-search fas ml-3 position-absolute text-muted mt-3" aria-hidden="true"></i>
-              <input class="form-control pl-5" type="text" placeholder="Search" aria-label="Search" name="search">
+              <input class="form-control pl-5" type="text" placeholder="Search" aria-label="Search" name="search"
+                [(ngModel)]="search" (keyup)="searchFor($event.target.value)">
             </div>
             <div class="col-md-4 month_bar">
-              <select name="Filter" class="font-weight-600 form-control">
-                <option>Weekly</option>
+              <select name="Filter" [(ngModel)]="filter" class="font-weight-600 form-control"
+                (ngModelChange)="onFilterChanged($event)">
+                <option *ngFor="let filter of filters" value="{{filter.value}}">{{filter.option}}</option>
               </select>
             </div>
           </div>
@@ -29,95 +31,56 @@
 <section class="section">
   <div class="row">
     <div class="col-lg-12">
-      <div class="table-responsive">
-        <table class="table table-bordered bg-white">
-          <thead>
-            <tr>
-              <th>Car Register</th>
-              <th>Name</th>
-              <th>Takaful Name</th>
-              <th>Expired Date</th>
-              <th>Follow up Date</th>
-              <th>Phone Number</th>
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-            <tr class="font-weight-600">
-              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
-              <td>Ujang selamat</td>
-              <td>Takaful Malaysia</td>
-              <td>12 Dec 2021</td>
-              <td>10 Dec 2021</td>
-              <td>011-21414141</td>
-              <td>Muz90@gmail.com</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <ng-template [ngIf]="dataSource.data.length === 0" [ngIfElse]="elseBlock">
+        <h1>No Data</h1>
+      </ng-template>
+      <ng-template #elseBlock>
+        <div class="responsive-table-custom">
+          <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8 table-bordered">
+            <ng-container matColumnDef="carRegister">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
+              <td class="font-14 font-weight-600 text-info" mat-cell *matCellDef="let element"> {{element.carRegister}}
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="customerName">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Name </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.customerName}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="principal">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Takaful Name </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.principal}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="expiredDate">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Expired Date </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.expiredDate | date: 'dd
+                MMM YYYY'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="followUpDate">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Follow up Date </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.followUpDate | date: 'dd
+                MMM YYYY'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="phoneNo">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Phone Number </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.phoneNo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Email </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+          </table>
+        </div>
+        <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
+      </ng-template>
     </div>
   </div>
 </section>
