--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,175 +7,29 @@
   </div>
 
   <ul class="sidebar-menu">
-    <li class="dropdown">
+    <li class="dropdown" *ngFor="let link of sidebarLinks; let x = index">
       <div class="float_mini_sidebar">
         <a data-toggle="sidebar">
-          <img class="active_icon" src="assets/img/icons/dashboard_icon_active.png">
-          <img src="assets/img/icons/dashboard_icon.png">
+          <img alt="image" class="active_icon"
+            src="{{sidebarLinks[x].isActive ? sidebarLinks[x].activeIcon : sidebarLinks[x].inActiveIcon}}">
         </a>
       </div>
-      <a class="nav-link  menu_title p-0 active" routerLink="/admin/dashboard">
-        <span>Dashboard</span>
+      <a class="nav-link menu_title p-0" *ngIf="sidebarLinks[x].link == null" [ngClass]="{
+        active: sidebarLinks[x].isActive, 'has-dropdown': sidebarLinks[x].hasDropdown
+      }">
+        <span>{{sidebarLinks[x].route}}</span>
       </a>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img src="assets/img/icons/markunread_mail_active.png">
-          <img class="active_icon" src="assets/img/icons/markunread_mail.png">
-        </a>
-      </div>
-      <a class="nav-link has-dropdown menu_title p-0">
-        <span>Follow Up</span>
+      <a class="nav-link menu_title p-0" routerLink="{{sidebarLinks[x].link}}" *ngIf="sidebarLinks[x].link !== null"
+        [ngClass]="{active: sidebarLinks[x].isActive, 'has-dropdown': sidebarLinks[x].hasDropdown}">
+        <span>{{sidebarLinks[x].route}}</span>
       </a>
-      <ul class="dropdown-menu bg-transparent">
-        <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/urgent/ncd">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/urgent/high-risk">High Risk</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/urgent/roadtax">Roadtax</a></li>
-      </ul>
-      <ul class="dropdown-menu bg-transparent">
-        <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/assist/ncd">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/follow/assist/market-value">Market Value</a></li>
-      </ul>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/thumb_up_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/thumb_up.png">
-        </a>
-      </div>
-      <a class="nav-link has-dropdown menu_title p-0">
-        <span>Endorsement</span>
-      </a>
-      <ul class="dropdown-menu bg-transparent">
-        <span class="font-14 font-weight-600 ml-5 pl-2">Urgent</span>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/urgent/ncd">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/urgent/high-risk">High Risk</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/urgent/roadtax">Roadtax</a></li>
-      </ul>
-      <ul class="dropdown-menu bg-transparent">
-        <span class="font-14 font-weight-600 ml-5 pl-2">Assist</span>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/assist/ncd">NCD</a></li>
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/endorsement/assist/market-value">Market Value</a>
+      <ul class="dropdown-menu bg-transparent" *ngFor="let menu of sidebarLinks[x].submenu; let i = index">
+        <span class="font-14 font-weight-600 ml-5 pl-2"
+          *ngIf="sidebarLinks[x].submenu[i].title !== null">{{menu.title}}</span>
+        <li class="pb-0 pt-0" *ngFor="let item of sidebarLinks[x].submenu[i].sublinks">
+          <a class="nav-link" routerLink="{{item.link}}">{{item.title}}</a>
         </li>
       </ul>
-      <ul class="dropdown-menu bg-transparent">
-        <a class="nav-link menu_title p-0" routerLink="/admin/endorsement/payment-fail">
-          <span class="font-14 font-weight-600 ml-5 pl-2">Payment Failed</span>
-        </a>
-      </ul>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/verified_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/verified.png">
-        </a>
-      </div>
-      <a class="nav-link has-dropdown menu_title p-0">
-        <span>Claim</span>
-      </a>
-      <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link" routerLink="/admin/claim/windscreen">Windscreen</a></li>
-      </ul>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/moped_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/moped.png">
-        </a>
-      </div>
-      <a class="nav-link has-dropdown menu_title p-0">
-        <span>Delivery</span>
-      </a>
-      <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0"><a class="nav-link">POS Office</a></li>
-      </ul>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/dollar_icon_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/dollar_icon.png">
-        </a>
-      </div>
-      <a class="nav-link menu_title p-0" routerLink="/admin/refund">
-        <span>Refund</span>
-      </a>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/maps_ugc_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/maps_ugc.png">
-        </a>
-      </div>
-      <a class="nav-link menu_title p-0" routerLink="/admin/notifications">
-        <span>Notifications</span>
-      </a>
-    </li>
-
-    <li class="dropdown ">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/headset_mic_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/headset_mic.png">
-        </a>
-      </div>
-      <a class="nav-link menu_title p-0" routerLink="/admin/telemarketing">
-        <span>Telemarketing</span>
-      </a>
-    </li>
-
-    <li class="dropdown">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/content_icon_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/content_icon.png">
-        </a>
-      </div>
-      <a class="nav-link has-dropdown menu_title p-0">
-        <span>Report</span>
-      </a>
-      <ul class="dropdown-menu bg-transparent">
-        <li class="pb-0 pt-0">
-          <a class="nav-link" routerLink="/admin/report/roadtax">Roadtax</a>
-        </li>
-      </ul>
-    </li>
-
-    <li class="dropdown">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/folder_icon_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/folder_icon.png">
-        </a>
-      </div>
-      <a class="nav-link menu_title p-0" routerLink="/admin/customer-database">
-        <span>Customer Database</span>
-      </a>
-    </li>
-
-    <li class="dropdown">
-      <div class="float_mini_sidebar">
-        <a data-toggle="sidebar">
-          <img alt="image" src="assets/img/icons/admin_user_active.png">
-          <img class="active_icon" alt="image" src="assets/img/icons/admin_user.png">
-        </a>
-      </div>
-      <a class="nav-link menu_title p-0" routerLink="/admin/user">
-        <span>User Management</span>
-      </a>
     </li>
   </ul>
 </aside>
