--- a/src/app/admin/telemarketing/telemarketing.component.html
+++ b/src/app/admin/telemarketing/telemarketing.component.html
@@ -1,3 +1,7 @@
+<!-- Email Modal Start -->
+<app-email></app-email>
+<!-- Email Modal End -->
+
 <div class="second_top_bar bg-white p-10">
   <div class="container">
     <div class="row">
