--- a/src/app/basket-details/marketing/marketing.component.html
+++ b/src/app/basket-details/marketing/marketing.component.html
@@ -199,7 +199,7 @@
           </div>
           <div class="col-4">
             <input class="form-check-input" type="radio" name="action" id="action3" value="Email"
-              formControlName="action">
+              formControlName="action" data-toggle="modal" data-target="#new_email_Modal">
             <label class="form-check-label" for="action3">
               Email
             </label>
