--- a/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
+++ b/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
@@ -114,16 +114,27 @@
         <label class="col-sm-3 col-form-label font-weight-bold">3. Action</label>
         <div class="col-sm-9">
           <select class="form-control w-75 form-group" formControlName="action">
-            <option disabled selected value=''>Select</option>
+            <option disabled selected value='null'>Select</option>
             <option *ngFor="let action of actionList" value="{{action.value}}">{{action.option}}</option>
           </select>
-          <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
-            formControlName="actionAmount">
-          <div *ngIf="amount.invalid && (amount.dirty || amount.touched)">
-            <div *ngIf="amount.errors.required" class="error">Refund amount is required</div>
-            <div *ngIf="amount.errors.pattern" class="error">Invalid Amount</div>
-          </div>
-          <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="actionRemark"></textarea>
+          <ng-template [ngIf]="basketDetailForm.value.action === 'Refund' " [ngIfElse]="elseBlock">
+            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
+              formControlName="refundAmount">
+            <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
+              <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
+              <div *ngIf="refundAmount.errors.required" class="error">Amount is required</div>
+            </div>
+            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
+          </ng-template>
+          <ng-template #elseBlock>
+            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
+              formControlName="topupAmount">
+            <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
+              <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
+              <div *ngIf="topupAmount.errors.required" class="error">Amount is required</div>
+            </div>
+            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
+          </ng-template>
         </div>
       </div>
       <div class="row">
