--- a/src/app/shared/dialog/email/email.component.html
+++ b/src/app/shared/dialog/email/email.component.html
@@ -1,64 +1,53 @@
-<div class="email_task_schedule_model">
-  <div class="modal left fade" id="email_task_schedule_Modal" tabindex="" role="dialog"
-    aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="new_email_model">
+  <div class="modal left fade" id="new_email_Modal" tabindex="" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <form class="h-100">
         <div class="modal-content">
           <div class="modal-header pb-3 pt-2">
-            <h4 class="font-21 modal-title">Email Task Schedule</h4>
+            <h4 class="font-21 modal-title">New Email</h4>
           </div>
           <div class="modal-body">
-
             <div class="form-group row mt-3">
               <label for="inputEmail3" class="col-sm-3 col-form-label">Add Email :</label>
-              <div class="col-sm-6">
+              <div class="col-sm-9">
                 <input type="text" class="form-control" placeholder="Sameon@gmail.com">
               </div>
-              <div class="col-sm-2">
-                <button class="btn btn-info pb-1 pt-2 shadow-none" data-toggle="modal"
-                  data-target="#email_task_schedule_Modal">
-                  <img alt="image" src="assets/img/icons/add.png">
-                </button>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="inputEmail3" class="col-sm-3 col-form-label"> </label>
-              <div class="col-sm-9">
-                <textarea class="form-control"></textarea>
-              </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label"></label>
+              <label for="inputEmail3" class="col-sm-3 col-form-label">Subject :</label>
               <div class="col-sm-9">
-                <div class="form-check-inline">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" value="">Click here for send all customer email or
-                    can add manually.
-                  </label>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <label for="inputEmail3" class="col-sm-3 col-form-label">Date : </label>
-              <div class="col-sm-9">
-                <input type="text" class="form-control" placeholder="28/08/2020">
+                <input type="text" class="form-control" placeholder="Report">
               </div>
             </div>
 
             <div class="form-group row">
               <label for="inputEmail3" class="col-sm-3 col-form-label">Messages :</label>
               <div class="col-sm-9">
-                <textarea class="form-control"
-                  placeholder="Hai.selamat datang ke All Takaful..jika anda berminat layari www.alltakaful.com. Terima Kasih."></textarea>
+                <!-- <div [ngxSummernote]></div> -->
+                <div [ngxSummernote]="config"></div>
+              </div>
+            </div>
+
+
+            <div class="form-group row">
+              <label for="inputEmail3" class="col-sm-3 col-form-label"></label>
+              <div class="col-sm-9 text-right">
+
+                <button class="bg-transparent btn p-0">
+                  <i class="fa-paperclip fas font-17 text-muted"></i>
+                </button>
+                <button class="bg-transparent btn p-0 pl-3">
+                  <i class="far fa-grin-alt text-muted font-17"></i>
+                </button>
               </div>
             </div>
           </div>
           <div class="justify-content-center modal-footer">
             <button type="button" class="bg-transparent border-0 btn btn-secondary shadow-none text-dark"
               data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-info shadow-none w-25">Submit</button>
+            <button type="submit" class="btn btn-info shadow-none w-25">Send</button>
           </div>
         </div>
       </form>
