--- a/src/app/widgets/quote-widget/quote-widget.component.html
+++ b/src/app/widgets/quote-widget/quote-widget.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex bg-white rounded mt-4">
+<div class="d-flex bg-white rounded">
   <div class="col-md-6">
     <h4 class="font-15 mt-3 text-muted">Total Quotation Request</h4>
     <ng-template [ngIf]="totalQuotationResponseData.totalQuotation" [ngIfElse]="NoQuote">
