--- a/src/app/widgets/sale-widget/sale-widget.component.html
+++ b/src/app/widgets/sale-widget/sale-widget.component.html
@@ -13,11 +13,11 @@
       <div class="d-flex">
         <div class="col-sm-6 p-0 text-center">
           <span class="text-white font-weight-normal">Target</span>
-          <h4 class="text-white font-20 mt-1">RM {{saleStatisticResponseData.targetValue}}</h4>
+          <h4 class="text-white font-20 mt-1">{{saleStatisticResponseData.targetValue}}</h4>
         </div>
         <div class="col-sm-6 p-0 text-center">
           <span class="text-white font-weight-normal">Archiever</span>
-          <h4 class="text-white font-20 mt-1">RM {{saleStatisticResponseData.targetAchievement}}</h4>
+          <h4 class="text-white font-20 mt-1">{{saleStatisticResponseData.targetAchievement}}</h4>
         </div>
       </div>
     </div>
