--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -20,15 +20,13 @@
         </div>
       </div>
       <app-note-widget [_filter]="filter"></app-note-widget>
-      <div class="container">
-        <div class="row third_row dashboard-box">
-          <div class="col-md-6 third_row_first_col pl-0">
-            <app-quote-widget [_filter]="filter"></app-quote-widget>
-          </div>
-          <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
-            <h4 class="font-15 mt-4 text-muted">Activity List</h4>
-            <app-basket-widget [_filter]="filter"></app-basket-widget>
-          </div>
+      <div class="row third_row dashboard-box mr-0">
+        <div class="col-md-6 third_row_first_col">
+          <app-quote-widget [_filter]="filter"></app-quote-widget>
+        </div>
+        <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
+          <h4 class="font-15 mt-4 text-muted">Activity List</h4>
+          <app-basket-widget [_filter]="filter"></app-basket-widget>
         </div>
       </div>
     </div>
