--- a/src/app/admin/notification/notification.component.html
+++ b/src/app/admin/notification/notification.component.html
@@ -58,29 +58,24 @@
                 </td>
               </ng-container>
 
-              <ng-container matColumnDef="carRegister">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Car Register</th>
-                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.carRegister}}</td>
-              </ng-container>
-
-              <ng-container matColumnDef="customerName">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.customerName}}</td>
-              </ng-container>
-
-              <ng-container matColumnDef="phoneNumber">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Phone Number</th>
-                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.phoneNumber}}</td>
-              </ng-container>
-
-              <ng-container matColumnDef="email">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Email</th>
-                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.email}}</td>
+              <ng-container matColumnDef="template">
+                <th scope="col" mat-header-cell *matHeaderCellDef>Template</th>
+                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.template}}</td>
               </ng-container>
 
               <ng-container matColumnDef="message">
-                <th scope="col" mat-header-cell *matHeaderCellDef>Messages</th>
+                <th scope="col" mat-header-cell *matHeaderCellDef>Message</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.message}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="type">
+                <th scope="col" mat-header-cell *matHeaderCellDef>Type</th>
+                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.type}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="templateId">
+                <th scope="col" mat-header-cell *matHeaderCellDef>Action</th>
+                <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.templateId}}</td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
