--- a/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
+++ b/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
@@ -113,28 +113,32 @@
       <div class="form-group row  pl-4 pr-5">
         <label class="col-sm-3 col-form-label font-weight-bold">3. Action</label>
         <div class="col-sm-9">
-          <select class="form-control w-75 form-group" formControlName="action">
+          <select class="form-control w-75 form-group" formControlName="action"
+            (ngModelChange)="onActionSelectorChanged($event)">
             <option disabled selected value='null'>Select</option>
             <option *ngFor="let action of actionList" value="{{action.value}}">{{action.option}}</option>
           </select>
-          <ng-template [ngIf]="basketDetailForm.value.action === 'Refund' " [ngIfElse]="elseBlock">
-            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
-              formControlName="refundAmount">
-            <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
-              <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
-              <div *ngIf="refundAmount.errors.required" class="error">Amount is required</div>
+
+          <ng-container [ngSwitch]="actionSelector">
+            <div *ngSwitchCase="'Refund'" [item]="actionSelector">
+              <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
+                formControlName="refundAmount">
+              <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
+                <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
+                <div *ngIf="refundAmount.errors.required" class="error">Amount is required</div>
+              </div>
+              <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
             </div>
-            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
-          </ng-template>
-          <ng-template #elseBlock>
-            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
-              formControlName="topupAmount">
-            <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
-              <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
-              <div *ngIf="topupAmount.errors.required" class="error">Amount is required</div>
+            <div *ngSwitchCase="'Topup'" [item]="actionSelector">
+              <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
+                formControlName="topupAmount">
+              <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
+                <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
+                <div *ngIf="topupAmount.errors.required" class="error">Amount is required</div>
+              </div>
+              <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
             </div>
-            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
-          </ng-template>
+          </ng-container>
         </div>
       </div>
       <div class="row">
