--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -141,9 +141,9 @@
                       </div>
 
                       <div *ngSwitchCase="'Market Value'" [item]="routeData">
-                        <app-assist-market [currentData]="detailComponentData"
+                        <app-assist-ncd [currentData]="detailComponentData"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                        </app-assist-market>
+                        </app-assist-ncd>
                       </div>
 
                       <div *ngSwitchCase="'Refund'" [item]="routeData">
