--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -46,7 +46,7 @@
           <div class="align-items-center justify-content-center row vh-100">
             <div class="col-md-4 text-center no-data-found">
               <img class="img-fluid " src="assets/img/no-data-found.png">
-              <h1 class="font-30 mt-2">No Data Found</h1>
+              <h1 class="font-30 mt-2">Sorry. No Data Inside!</h1>
             </div>
           </div>
         </div>
